fix: login and register working